# Changelog - ElvUI_mMediaTag
[Eng] - All changes to this project will be documented in this file. The latest changes are at the top.

## [ver. 3.33] - XX.04.2024
### FIX
- FIX - Wrong reaction colors on portraits, thx to Tsxy
- FIX - Prevent nil Error with Dungeon Score colors (https://github.com/Stanzilla/WoWUIBugs/issues/544)
### Update
- UPDATE - Enabled mRoleIcon Tags for Classic Versions
### NEW
- NEW - Background Skin for the Objectivetracker

## [ver. 3.32] - 28.03.2024
### FIX
- FIX - take care of JiberishIcons changes
- FIX - Offset settings for Portraits Moon texture
### Update
- UPDATE - Cleand up Portraits Settings
- UPDATE - Change Rare/Elite border toggle behavior for Portraits
### NEW
- NEW - Add class colored bg for Portraits class icons
- NEW - Add diffrent Styles for Portraits Class icons background
- NEW - New Portraits Texture simple Square

## [ver. 3.31] - 25.03.2024
### FIX
- FIX - Bug with Portrait Class Icons

## [ver. 3.30] - 25.03.2024
### FIX
- FIX - Dropdown menu Button height, depends now on Font size to prevent overlapping text
- FIX - misalignment of the non-player Portraits when Classicons is enabled
### Update
- UPDATE - Add Tooltip Anchor settings for Teleports Datatext
- UPDATE - TOC update for Classic and Retail
### NEW
- NEW - Add support for the great Class Icons from Jiberish for Portraits
- NEW - TAG mTargetMarker

## [ver. 3.29] - 05.02.2024
### FIX
- FIX - German Locals
- FIX - Prevent nil error with TAG icons and wrong settings
- FIX - Mirror bug for Portraits
- FIX - Shadow bug with class icons for Portraits
- FIX - Portraits of other units with class icons enabled
- FIX - Swapped settings for docks XIV BG and XIV MAUI
### Update
- UPDATE - Update TAG icon defaults
- UPDATE - add Reload UI popup for Portraits class icons settings tp prevent errors

## [ver. 3.28] - 04.02.2024
### FIX
- FIX - Removed unused Settings from TAG settings menu
- FIX - Portrait Rare/Elite Texture Border and Shadow was swapped
### Update